--- a/AddArtist.html
+++ b/AddArtist.html
@@ -29,9 +29,6 @@
 
         <ul class="nav nav-tabs fixed-top bg-dark navbar-dark" role="tablist">
             <li class="nav-item">
-                <a class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
                 <a class="nav-link active"  href='AddArtist.html'>Artist</a>
             </li>
             <li class="nav-item">
@@ -44,6 +41,21 @@
             <a class ="nav-link"  href="PaySummary.html">Pay Summary</a>
               
           </li>
+            <div id = "logoutBtn" style="display: none;">
+                <li class = "nav-item" >
+                    <div class="position-absolute top-0 end-0">
+                        <button onclick= "logout()" class="btn btn-outline-danger">Log Out</button>
+                    </div>
+
+                </li>
+            </div>
+            <div id = "loginBtn">
+                <li class = "nav-item" >
+                    <div class="position-absolute top-0 end-0">
+                        <button onclick= "loginPage()" class="btn btn-outline-success">Log In</button>
+                    </div> 
+                </li>
+            </div>
         </ul><br>
         </div>
         <!-- Navigation bar ends here -->
@@ -268,7 +280,7 @@
                 <input type="number" class="form-control" id="artistDistanceToStudio" placeholder="Distance to studio">
               </div>       
                 
-              <button onclick="addArtist()" id = "createArtistButton" type="button" class="btn btn-primary">Add Artist</button>
+              <button onclick="addArtist()" id = "createArtistButton" type="submit" class="btn btn-primary">Add Artist</button>
             </form>
         </div>
          </div>
