--- a/InputResponse.html
+++ b/InputResponse.html
@@ -245,7 +245,7 @@
                           </div>
                          </div>
                         <button onclick="miscPrev()" type="button" class="btn btn-primary">Previous</button>
-                      <button onclick="saveResponsev1()" type="button" class="btn btn-success">Submit</button>
+                      <button onclick="saveResponsev1()" type= "submit" class="btn btn-success">Submit</button>
                     </div>
                 </form>
             </div>
