--- a/Responses.html
+++ b/Responses.html
@@ -33,9 +33,6 @@
 
         <ul class="nav nav-tabs fixed-top bg-dark navbar-dark" role="tablist">
             <li class="nav-item">
-                <a class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
                 <a class="nav-link"  href='AddArtist.html'>Artist</a>
             </li>
             <li class="nav-item">
@@ -48,6 +45,21 @@
             <a class ="nav-link"  href="PaySummary.html">Pay Summary</a>
               
           </li>
+            <div id = "logoutBtn" style="display: none;">
+                <li class = "nav-item" >
+                    <div class="position-absolute top-0 end-0">
+                        <button onclick= "logout()" class="btn btn-outline-danger">Log Out</button>
+                    </div>
+
+                </li>
+            </div>
+            <div id = "loginBtn">
+                <li class = "nav-item" >
+                    <div class="position-absolute top-0 end-0">
+                        <button onclick= "loginPage()" class="btn btn-outline-success">Log In</button>
+                    </div> 
+                </li>
+            </div>
         </ul><br>
             
         <!-- Navigation bar ends here -->
@@ -288,7 +300,7 @@
             </div>
                 </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button onclick= "resetResponseEditForm()" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                 <button onclick= "editResponseBtn()" type="button" class="btn btn-primary" data-bs-dismiss="modal">Save changes</button>
               </div>
             </div>
@@ -543,7 +555,7 @@
                           </div>
                          </div>
                         <button onclick="miscPrev()" type="button" class="btn btn-primary">Previous</button>
-                      <button onclick="saveResponsev1()" type="button" class="btn btn-success">Submit</button>
+                      <button onclick="saveResponsev1()" type= "submit" class="btn btn-success">Submit</button>
                     </div>
                 </form>
             </div>
